# wsclient

./: README.md  configure.ac
src/: Makefile.am  main.c  wsclient.c  wsclient.h
tests/: Makefile.am  check_ws.c
tests/server/: client.js  server.js
